deployment_yaml/club-manager-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deploy
  labels:
    environment: test
spec:
  replicas: 3
  selector:
    matchLabels:
      environment: test
  minReadySeconds: 10

  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate

  template:
    metadata:
      labels:
        environment: test
    spec:
      containers:
      - name: club-manager-application
        image: azizur013/club-manager:latest
        ports:
        - containerPort: 80
