deployment_yaml/redis-frontend-deployment.yml
# Frontend deployment
apiVersion: apps/v1 # for version before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
    name: frontend
    labels:
        app: guestbook
spec:
    replicas: 2
    selector:
        matchLabels:
            app: guestbook
            tier: frontend
    template:
        metadata:
            labels:
                app: guestbook
                tier: frontend
        spec:
            container:
            - name: php-redis
              image: gcr.io/google_samples/gb-frontend:v4
              resources:
                requests:
                    cpu: 100m
                    memory: 100Mi
              ports:
              - containerPort: 80
