deployment_yaml/redis-master-deployment.yml
# redis master deployment
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis-master
    labels:
        app: redis
spec:
    replicas: 1
    selector:
        matchLabels:
            app: redis
            role: master
            tier: backend
    template:
        metadata:
            labels:
                app: redis
                role: master
                tier: backend
        spec:
            container:
            - name: master
              image: k8s.gcr.io/redis:e2e
              resources:
                requests:
                    cpu: 100m
                    memory: 100Mi
              ports:
              - containerPort: 6379
