deployment_yaml/wear.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: wear
  name: wear
  namespace: app-ingress
spec:
  containers:
  - image: kodekloud/ecommerce:apparels
    name: wear
    ports:
    - containerPort: 8080
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
