deployment_yaml/aspnet_test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: aspnetapp
  labels:
    app: aspnet
spec:
  containers:
  - name: aspnetapp-image 
    image: "mcr.microsoft.com/dotnet/core/samples:aspnetapp"
    ports:
    - containerPort: 80
      protocol: TCP

---

kind: Service
apiVersion: v1
metadata:
  name: aspnetapp-service
spec:
  selector:
    app: aspnet
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
