deployment_yaml/club-manager-service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-deploy-service
spec:
  selector:
    environment: test
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 80
    nodePort: 31110
