deployment_yaml/redis-loadBalancer-svc-deployment.yml
# redis loadBalancer service deployment
apiVersion: v1 # for version before 1.9.0 use apps/v1beta2
kind: Service
metadata:
    name: frontend-svc
    labels:
        app: guestbook
        tier: frontend
spec:
    type: LoadBalancer
    ports:
    - port: 80
    selector:
        app: guestbook
        tier: frontend
