deployment_yaml/redis-slave-service.yml
# redis slave service deployment
apiVersion: v1 # for version before 1.9.0 use apps/v1beta2
kind: Service
metadata:
    name: redis-slave-svc
    labels:
        app: redis
        role: slave
        tier: backend
spec:
    ports:
    - port: 6379
    type: ClusterIp
    selector:
        app: redis
        role: slave
        tier: backend
