deployment_yaml/aspnetapp.yaml
apiVersion: v1
kind: Pod
metadata:
  name: aspnetapp
  labels:
    app: aspnet
spec:
  containers:
  - name: aspnetapp-image 
    image: "mcr.microsoft.com/dotnet/core/samples:aspnetapp"
    ports:
    - containerPort: 80
      protocol: TCP

---

kind: Service
apiVersion: v1
metadata:
  name: aspnetapp-service
spec:
  selector:
    app: aspnet
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aspnet-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: aspnetapp-service
            servicePort: 80
