deployment_yaml/aspnetingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aspnet-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: aspnetapp-service
            servicePort: 80
