deployment_yaml/guestbook-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook
  namespace: compassdv
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/use-private-ip: "true"
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - secretName: hello-world.info
  rules:
  - http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
